# python-cli-devenv-and-ci-sample

./: .coveragerc  .gitignore  README.md  Tour.md  build-all.sh  build.sh  dev-env-first-time.sh  install.sh  pack.sh  pyproject.toml  pyrightconfig.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
src/: __init__.py  main.py
tests/: __init__.py  test_main.py
