[tool.poetry]
name = "demo"
version = "0.1.0"
description = "Sample Python app"
authors = ["alastairtree"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
typer = {extras = ["all"], version = "^0.7.0"}
isort = "^5.11.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
black = "^22.12.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
# can execute via poetry, e.g. `poetry run demo hello world`
demo = 'src.main:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


